This corrected the color behind the text and added an image

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     color: #222222;
     font-size: 1em;
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    background-color:#5A799E;
 }
 
 .content-footer,
@@ -12,7 +13,7 @@ body {
 
 .masthead {
   padding: 6em 0;
-  background-image: url('../img/code.jpg');
+  background-image: url('../img/tool.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -37,6 +38,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 2em;
+    background-color: #5A799E;
 }
 
 .details > p {
